FIX-PROD: mobile phone mockup image overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -335,7 +335,6 @@ body {
   width: 286.6px;
   height: 631.4px;
   margin-left: 50%;
-  margin-top: 50%;
   transform: translate(-50%, 9px);
   border-radius: 38.6px;
 }
